--- a/mm_evaluation/templates/mm_evaluation/autoevaluation.html
+++ b/mm_evaluation/templates/mm_evaluation/autoevaluation.html
@@ -1,11 +1,13 @@
-{% load static %}
-
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-    <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+<h1>Autoevaluación</h1>
+<ol>
+    {% for macroprocess in macroprocesses_list %}
+    <li>
+        <lh>{{ macroprocess.name }}</lh>
+        <ul>
+            {% for process in macroprocess.process_set.all %}
+            <li>{{ process.description }}</li>
+            {% endfor %}
+        </ul>
+    </li>
     {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+</ol>
