--- a/mm_evaluation/templates/mm_evaluation/autoevaluation.html
+++ b/mm_evaluation/templates/mm_evaluation/autoevaluation.html
@@ -7,10 +7,10 @@
             {% for process in macroprocess.process_set.all %}
 
             <li>{{ process.description }}</li>
-            <p>Puntuación:</p>
-            <form action="{% url 'mm_evaluation:save_process_score' process.id %}" method="post">
+            <form action="{% url 'mm_evaluation:save_answer' process.id %}" method="post">
                 {% csrf_token %}
-                <select name="score{{ process.id }}" id="score{{ process.id }}">
+                <p>Puntuación:</p>
+                <select name="score">
                     <option value ="0">0</option>
                     <option value ="1">1</option>
                     <option value ="2">2</option>
@@ -18,12 +18,11 @@
                     <option value ="4">4</option>
                     <option value ="5">5</option>
                 </select>
-
-                <p><input type="submit" value="Enviar"></p>
+                <p><input type="submit" value="Submit"></p>
             </form>
+
             {% endfor %}
         </ul>
     </li>
     {% endfor %}
-    <input type="submit" value="Ver resultados">
 </ol>
