--- a/mm_evaluation/templates/mm_evaluation/autoevaluation.html
+++ b/mm_evaluation/templates/mm_evaluation/autoevaluation.html
@@ -18,7 +18,7 @@
                     <option value ="4">4</option>
                     <option value ="5">5</option>
                 </select>
-                <p><input type="submit" value="Submit"></p>
+                <p><input type="submit" value="Enviar"></p>
             </form>
 
             {% endfor %}
