Paginating in autoevaluation, one form to score processes

--- a/mm_evaluation/templates/mm_evaluation/autoevaluation.html
+++ b/mm_evaluation/templates/mm_evaluation/autoevaluation.html
@@ -3,31 +3,48 @@
 </head>
 <body style="background-color:honeydew;">
     <h1>Autoevaluación</h1>
-    <ol>
+    <form action="{% url 'mm_evaluation:save_answer' autoevaluation.id %}" method="post">
+        {% csrf_token %}
         {% for macroprocess in macroprocesses_list %}
-        <li>
-            <lh>{{ macroprocess.name }}</lh>
-            <ul>
-                {% for process in macroprocess.process_set.all %}
+        <h2>{{macroprocess.number }}. {{ macroprocess.name }}</h2>
+        <ol>
+            {% for process in macroprocess.process_set.all %}
 
-                <li>{{ process.guiding_question }}</li>
-                <form action="{% url 'mm_evaluation:save_answer' process.id autoevaluation.id %}" method="post">
-                    {% csrf_token %}
-                    <p>Puntuación:</p>
-                    <select name="score">
-                        <option value ="0">0</option>
-                        <option value ="1">1</option>
-                        <option value ="2">2</option>
-                        <option value ="3">3</option>
-                        <option value ="4">4</option>
-                        <option value ="5">5</option>
-                    </select>
-                    <p><input type="submit" value="Enviar"></p>
-                </form>
+            <li>{{ process.guiding_question }}</li>
+            <p>Puntuación:</p>
+            <select name="score_{{ process.id }}">
+                <option value="" selected>---------</option>
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
             {% endfor %}
-        </ul>
-    </li>
-{% endfor %}
-<a href = "{% url 'mm_evaluation:autoevaluation_result' autoevaluation.id %}">Terminar</a>
-  </ol>
+        </ol>
+        {% endfor %}
+        <p><input type="submit" value="Guardar"></p>
+    </form>
 </body>
+
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}">Retroceder al anterior</a>
+        {% endif %}
+
+        <span class="current">
+            Macroproceso {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">Avanzar al siguiente</a>
+        {% else %}
+            {% if is_autoevaluation_filled %}
+            <a href = "{% url 'mm_evaluation:autoevaluation_result' autoevaluation.id %}">Terminar de evaluar y ver resultados. ADVERTENCIA: no podrá editar los puntajes que ha seleccionado en esta autoevaluación.</a>
+            {% endif %}
+        {% endif %}
+    </span>
+</div>
