--- a/mm_evaluation/templates/mm_evaluation/base.html
+++ b/mm_evaluation/templates/mm_evaluation/base.html
@@ -121,6 +121,7 @@
             <a href="{% url 'mm_evaluation:registration' %}">Registro</a>
             <a href="{% url 'mm_evaluation:begin_or_continue_autoevaluation' %}">Diagnosticar</a>
             <a href="{% url 'mm_evaluation:results' %}">Resultados</a>
+            <a href="{% url 'mm_evaluation:password_change' %}">Cambiar contraseña</a>
             <a href="{% url 'mm_evaluation:logout' %}">Logout</a>
         </div>
         <div class="content">
